--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,3 +1,15 @@
 .navbar-brand {
 	color:#FFF !important;
 }
+
+.drop-area {
+  border: 2px dashed #007bff;
+  background-color: #f8f9fa;
+  transition: background-color 0.2s;
+}
+.drop-area:hover {
+  background-color: #e9ecef;
+}
+.drop-content i {
+  font-size: 2.5rem;
+}
