--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -13,3 +13,15 @@
 .drop-content i {
   font-size: 2.5rem;
 }
+
+/* #productName {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+} */
+td {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 250px; /* Adjust to your design */
+}
