fixed conflict inc css

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -24,6 +24,7 @@ td {
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 250px; /* Adjust to your design */
+}
 .prod-size input {
 	margin-left:10px;
 }
