--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -2,25 +2,31 @@
 	font-family: webfonts;
 	src: url('../fonts/Quicksand-VariableFont_wght.ttf');
 }
+
 @font-face {
 	font-family: EagleLake-Regular;
 	src: url('../fonts/EagleLake-Regular.ttf');
 }
+
 body {
-	margin:0px;
-	font-family:webfonts;
+	margin: 0px;
+	font-family: webfonts;
 }
+
 .text-right {
-	text-align:right;
+	text-align: right;
 }
+
 .no-gutters {
-	padding:0px !important;
+	padding: 0px !important;
 }
+
 .topnav {
 	overflow: hidden;
 	background-color: #FFF;
 	float: right;
 }
+
 .topnav a {
 	float: left;
 	display: block;
@@ -29,223 +35,276 @@ body {
 	padding: 14px 16px;
 	text-decoration: none;
 	font-size: 17px;
-	text-transform:uppercase;
+	text-transform: uppercase;
 }
+
 .topnav a:hover {
 	color: black;
 }
+
 .topnav a.active {
 	color: #000;
 }
+
 .topnav .icon {
 	display: none;
 }
+
 .searchbox {
 	padding: 14px 0px !important;
 }
+
 .searchbox input {
-	border:#CCC 1px solid;
-	width:300px;
-	display:none;
-	padding:0px 3px;
+	border: #CCC 1px solid;
+	width: 300px;
+	display: none;
+	padding: 0px 3px;
 }
+
 .logo img {
-	width:100px;
+	width: 100px;
 }
+
 .head-row {
-	border-bottom:#efefef 1px solid;
+	border-bottom: #efefef 1px solid;
 }
 
 .tel-ico {
-	padding:23px 0px !important;
+	padding: 23px 0px !important;
 }
+
 .tel-ico i {
 	border-radius: 50%;
-    border: #efefef 1px solid;
-    padding: 10px 13px;
-	color:#cb845a;
+	border: #efefef 1px solid;
+	padding: 10px 13px;
+	color: #cb845a;
 	font-size: 20px;
 	position: relative;
-    top: 15px;
-	margin-right:10px;
+	top: 15px;
+	margin-right: 10px;
 }
+
 .callnow {
-	padding:15px 10px !important;
-	text-align:right;
+	padding: 15px 10px !important;
+	text-align: right;
 }
+
 .callnow span {
-	text-transform:uppercase;	
-	font-weight:bold;
+	text-transform: uppercase;
+	font-weight: bold;
 }
+
 .banner img {
-	width:100%;
+	width: 100%;
 }
+
 .highlightrow {
 	padding: 25px 25px 0px 25px;
 }
+
 .highlights {
-	border:#efefef 1px solid;
-	padding:5px;
-	text-transform:uppercase;
-	font-weight:bold;
-	font-size:14px;
+	border: #efefef 1px solid;
+	padding: 5px;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 14px;
 }
-.highlights i{
-	margin-right:15px;
+
+.highlights i {
+	margin-right: 15px;
 }
+
 .category-promo img {
-	width:100%;
+	width: 100%;
 }
+
 .cat-title {
-	text-transform:uppercase;
-	text-align:center;
+	text-transform: uppercase;
+	text-align: center;
 }
+
 section {
-	margin-bottom:50px;
+	margin-bottom: 50px;
 }
+
 section h3 {
-	text-transform:uppercase;
-	font-size:25px;
-	font-weight:bold;
-	margin:10px 0px;
-	text-align:center;
+	text-transform: uppercase;
+	font-size: 25px;
+	font-weight: bold;
+	margin: 10px 0px;
+	text-align: center;
 }
+
 /*Slider*/
 .owl-carousel {
-	margin-top:20px;
+	margin-top: 20px;
 }
+
 .owl-nav {
 	position: absolute;
-    top: 40%;
-    width: 100%;
-    font-size: 51px;
-    color: #CCC;
+	top: 40%;
+	width: 100%;
+	font-size: 51px;
+	color: #CCC;
 }
+
 .owl-next {
-	right:0px;
-	position:absolute;
+	right: 0px;
+	position: absolute;
 }
+
 .star-rate {
-	text-align:center;
-	font-size:14px;
-	color:#CCC;
+	text-align: center;
+	font-size: 14px;
+	color: #CCC;
 }
+
 .gold {
-	color:#ffb700 !important;
+	color: #ffb700 !important;
 }
+
 .item-name {
-	text-align:center;
-	text-transform:uppercase;
+	text-align: center;
+	text-transform: uppercase;
 }
+
 .item-price {
-	text-align:center;
-	font-weight:bold;
+	text-align: center;
+	font-weight: bold;
 }
+
 .order-btn {
-	background-image:url('../images/order-now.png')!important;
-	width:150px;
-	height:45px;
-	background:no-repeat;
-    background-repeat: no-repeat;
-    background-position: center;
-    border: none;
-    background-color: transparent;
+	background-image: url('../images/order-now.png') !important;
+	width: 150px;
+	height: 45px;
+	background: no-repeat;
+	background-repeat: no-repeat;
+	background-position: center;
+	border: none;
+	background-color: transparent;
 }
+
 /*Slider*/
 .footerbanner {
-	background-size:cover;
-	height:420px;
+	background-size: cover;
+	height: 420px;
 	margin-bottom: 0px !important;
 }
+
 .footerbanner .leftbox {
 	font-weight: 800;
-    color: #000;
-    font-size: 80px;
-    line-height: 80px;
-    text-transform: uppercase;
+	color: #000;
+	font-size: 80px;
+	line-height: 80px;
+	text-transform: uppercase;
 	padding-top: 10%;
 }
+
 .footerbanner .rightbox {
-	text-align:right;
-	padding-top:15%;
+	text-align: right;
+	padding-top: 15%;
 }
+
 .footerbanner .yearblock {
-	font-family:EagleLake-Regular;
-	font-size:60px;
-	color:#FFF;
+	font-family: EagleLake-Regular;
+	font-size: 60px;
+	color: #FFF;
 }
+
 .btn-black {
-	background-color:#000;
-	border:#000 1px solid !important;
-	color:#FFF;
-	border:none;
-	border-radius:none !important;
+	background-color: #000;
+	border: #000 1px solid !important;
+	color: #FFF;
+	border: none;
+	border-radius: none !important;
 }
+
 .btn-black:hover {
-	border:#000 1px solid;
-	color:#000;
+	border: #000 1px solid;
+	color: #000;
 }
+
 footer {
-	background-color:#333333;
+	background-color: #333333;
 }
+
 footer .col-md-3 {
-	margin-top:50px;
-	color:#FFF;
+	margin-top: 50px;
+	color: #FFF;
 }
+
 footer h4 {
-	font-size:18px;
-	text-transform:uppercase;
+	font-size: 18px;
+	text-transform: uppercase;
 }
+
 footer li i {
-	margin-right:10px;
+	margin-right: 10px;
 }
+
 footer ul {
-    list-style-type: none;
-    padding: 0px;
-    line-height: 30px;
-    font-size: 14px;
-    text-transform: capitalize;
+	list-style-type: none;
+	padding: 0px;
+	line-height: 30px;
+	font-size: 14px;
+	text-transform: capitalize;
 }
+
 .social-ico {
-	color:#FFF;
-	font-size:25px;
-	padding-bottom:10px;
+	color: #FFF;
+	font-size: 25px;
+	padding-bottom: 10px;
 }
+
 .social-ico i {
-	margin:10px;
+	margin: 10px;
 }
+
+
+ .product-img {
+	height: 500px;
+	width: 100%;
+	object-fit: cover;
+	display: block;
+}
+
 @media screen and (max-width: 600px) {
 	.topnav a:not(:first-child) {
 		display: none;
 	}
+
 	.topnav a.icon {
 		float: right;
 		display: block;
 	}
-}
-@media screen and (max-width: 600px) {
+
 	.topnav.responsive {
 		position: relative;
 		width: 100%;
 	}
+
 	.topnav.responsive .icon {
 		position: absolute;
 		right: 0;
 		top: 0;
 	}
+
 	.topnav.responsive a {
 		float: none;
 		display: block;
 		text-align: left;
 	}
+
 	.footerbanner {
 		background-size: 165% 100%;
 		height: 420px;
 		background-position: left;
 	}
+
 	.footerbanner .yearblock {
 		font-family: EagleLake-Regular;
 		font-size: 60px;
 		color: #393939;
 	}
+
 }
